get poem and author
