# routes/index.js
@@ -2,6 +2,6 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/', require('./swagger'));
-router.use('/users', require('./users.js'));
+router.use('/users', require('./users'));
 
 module.exports = router;
